# mkxp-oneshot

./: .gitignore  CMakeLists.txt  CommonEvents.rxdata  Dockerfile  Dockerfile-linux  Dockerfile-windows  Info.plist  Map243.rxdata  OneShot  README.md  build-entrypoint-linux.sh  build-entrypoint-windows.bat  cleanup.sh  conanfile.py  graph_info.json  install.command  libraries.rb  make-appimage.sh  make-journal-linux.sh  make-linux-appdir.sh  make-linux-dist.sh  make-oneshot-linux.sh  make-oneshot-mac.command  make-oneshot-mac.sh  mklang.rb  mklangsrc.rb  mkxp.conf.sample  mkxp.pro  oclint.sh  oneshot.conf  oneshot.conf.sample  rpgscript - solstice.bat  rpgscript.bat  rpgscript.rb  rpgscript.sh  steam_appid.txt
.github/: build-mys2.yml
.github/workflows/: build-baremetal.yaml  build-linux-baremetal.yaml  build-mys2.yml  build-standalone.yaml  build-steam.yaml  build-windows-baremetal.yaml  build-windows.yaml
OneShot.app/Contents/: Info.plist
OneShot.app/Contents/Frameworks/: libSDL2_image-2.0.0.dylib  libboost_program_options-mt.dylib  libfreetype.6.dylib  libogg.0.dylib
OneShot.app/Contents/MacOS/: oneshot  oneshot.sh
OneShot.app/Contents/Resources/: icon.icns  oneshot  steam_appid.txt
assets/: AppRun  icon.icns  icon_journal.icns  oneshot.desktop
binding-mri/: aleffect-binding.cpp  audio-binding.cpp  binding-mri.cpp  binding-util.cpp  binding-util.h  bitmap-binding.cpp  chroma-binding.cpp  discord-binding.cpp  filesystem-binding.cpp  font-binding.cpp  gamejolt-binding.cpp  graphics-binding.cpp  input-binding.cpp  journal-binding.cpp  journal-binding.h  modshot-binding.cpp  modshot-fiber-binding.cpp  modshot-window-binding.cpp  module_rpg.cpp  module_rpg1.rb  niko-binding.cpp  oneshot-binding.cpp  otherview-binding.cpp  plane-binding.cpp  screen-binding.cpp  sprite-binding.cpp  steam-binding.cpp  tilemap-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  wallpaper-binding.cpp
chromasdk/: ChromaApi.h  ChromaSDKImpl.cpp  ChromaSDKImpl.h  FrameController.cpp  FrameController.h  RzChromaSDKDefines.h  RzChromaSDKTypes.h  RzErrors.h
conan-steamworks/: .gitignore  conanfile.py
journal/: journal.cpp  journal.pro  main.cpp  niko.cpp  resources.rc  setup-unix-remake.py
journal/linux/: display.h  journal.c  main.c  niko.c
journal/mac/: README.md  display.h  image.h  journal.c  journal.py  journal.spec  niko.c  qt.conf
journal/mac/image/: pixmapper.sh
journal/unix/: LICENSE  journal-linux.spec  journal.py  journal.spec
journal/unix-remake/: LICENSE  README.md  journal.py  renameandconvert.py
journal/unix/macOS/: Python
journal/w32/: .gitignore  journal.c  journal.sln  main.c  niko.c  resources.rc
journal/w32/journal/: journal.vcxproj  journal.vcxproj.filters
journal/w32/journal/src/: journal.c  resources.rc
patches/assets/Data/: CommonEvents.rxdata  Map004.rxdata  Map005.rxdata  Map061.rxdata  Map243.rxdata  Map255.rxdata
patches/mac/: CompleteBundle.cmake  CreateBundle.sh  Info.plist.in  JournalInfo.plist.in  readme-bad_patch_method.txt  steamshim
patches/mac/OneShot_template.app/Contents/: Info.plist
patches/mac/OneShot_template.app/Contents/MacOS/: oneshot.sh
patches/mac/OneShot_template.app/Contents/Resources/: libSDL2-2.0.0.dylib  libSDL2_ttf-2.0.0.dylib  libSDL_sound-1.0.1.dylib  libphysfs.1.dylib  libpixman-1.0.dylib  libpng.dylib  libruby.2.2.0.dylib  libsigc-2.0.0.dylib  libsteam_api.dylib  libvorbis.0.dylib  libvorbisfile.3.dylib
patches/ruby/: static_zlib.patch
scripts/: CMakeLists.txt  Credits_Message.rb  Data_FastTravel.rb  Data_Footsteps.rb  Data_Item.rb  Data_SpecialEventData.rb  Demo.rb  Desktop_Message.rb  Doc_Message.rb  EdText.rb  Ed_Message.rb  FastTravel.rb  Game_Character 1.rb  Game_Character 3.rb  Game_Character_2.rb  Game_Character_3.rb  Game_Event.rb  Game_FastTravel.rb  Game_Map.rb  Game_Oneshot.rb  Game_Party.rb  Game_Picture.rb  Game_Player.rb  Game_Switches.rb  Game_System.rb  Game_Temp.rb  Interpreter 1.rb  Interpreter 3.rb  Interpreter_1.rb  Interpreter_3.rb  Interpreter_5.rb  Interpreter_7.rb  Main.rb  Particles.rb  Persistent.rb  Puzzle_Film.rb  Puzzle_Pixel.rb  Puzzle_Safe.rb  RPG.rb  SaveLoad.rb  (+28 more)
scripts/shell/: build-entrypoint-windows.bat
shader/: blur.frag  chronos.frag  crt.frag  crt_sprite.frag  cubic_lens.frag  glitch.frag  mask.frag  mask.vert  obscured.frag  simple.frag  water.frag  zoom.vert
src/: al-util.h  aldatasource.cpp  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiochannels.cpp  audiochannels.h  audiofilter.cpp  audiofilter.h  audiostream.cpp  audiostream.h  bitmap.cpp  bitmap.h  config.cpp  config.h  crash-handler.cpp  crash-handler.h  etc-internal.h  eventthread.cpp  eventthread.h  filesystem.cpp  filesystem.h  font.cpp  font.h  gl-debug.cpp  gl-meta.cpp  glstate.h  graphics.cpp  graphics.h  i18n.cpp  i18n.h  input.cpp  input.h  keybindings.cpp  mac-desktop.h  mac-desktop.mm  main.cpp  oneshot.cpp  (+28 more)
src/audio/headers/: al-util.h  audiochannels.h  audiostream.h
src/audio/source/: alstream.cpp  audio.cpp  audiochannels.cpp  soundemitter.cpp
src/filesystem/source/: filesystem.cpp
src/graphics/headers/: sprite.h  tilemap.h
src/graphics/source/: bitmap.cpp  tilemap.cpp
src/input/headers/: input.h
src/input/source/: input.cpp  keybindings.cpp
src/opengl/headers/: gl-util.h  glstate.h  shader.h  viewport.h
src/steam/: steam.cpp
steamshim/: steamshim_child.c
steamshim_parent/: CMakeLists.txt  Makefile  README.md  resources.rc  steamshim_parent.cpp
windows/: shim.c
